--- a/supervisord.conf
+++ b/supervisord.conf
@@ -55,3 +55,7 @@ autorestart=true
 stopsignal=QUIT
 stdout_logfile=/var/log/novnc.log
 stderr_logfile=/var/log/novnc.err
+
+[program:mysql]
+priority=20
+command=/usr/bin/mysqld_safe
